JumpScript/tests/baselines/reference/primitiveTypeAsClassName.errors.txt
tests/cases/compiler/primitiveTypeAsClassName.jump(1,7): error TS2414: Class name cannot be 'any'.


==== tests/cases/compiler/primitiveTypeAsClassName.jump (1 errors) ====
    class any {}
          ~~~
!!! error TS2414: Class name cannot be 'any'.